--- a/research.html
+++ b/research.html
@@ -133,7 +133,19 @@
             <a href="https://www.dropbox.com/scl/fi/i6neja6orni6ze7ebrf1y/Contract-Design-in-Renewable-Energy-Auctions-Bhakri.pdf?rlkey=sz8x0kvn2zt4h9rcb69akgqqy&st=w7lvcy92&dl=0" target="_blank">Paper</a>
         </div>
 
+
         <!-- Project 2 -->
+        <div class="research-project">
+            <h2>Strategic bidding in dynamic renewable energy auctions</h2>
+            <p>
+                             Reaching climate goals requires a green energy transition over time, necessitating phased procurement and making dynamics important for the auction design. This paper develops a dynamic auction model where forward-looking firms adjust bids strategically across multiple periods. We derive equilibrium bidding strategies, showing that bid markups depend on cost distribution, market composition, and continuation values. Comparing one-shot and two-period auctions shows a tradeoff: one-shot auctions involve higher bids due to larger auctioned quantities, while dynamic auctions allow firms to bid strategically over time. Our findings highlight how auction design influences procurement efficiency, emphasizing the need to account for bidder expectations to minimize costs and improve outcomes.
+
+            </p>
+            <a href="https://www.dropbox.com/scl/fi/i6neja6orni6ze7ebrf1y/Contract-Design-in-Renewable-Energy-Auctions-Bhakri.pdf?rlkey=sz8x0kvn2zt4h9rcb69akgqqy&st=w7lvcy92&dl=0" target="_blank">Paper</a>
+        </div>
+
+  
+        <!-- Project 3 -->
         <div class="research-project">
             <h2>How large are the cost savings from renewable energy auctions: Evidence from Germany (With Richard Sweeney)</h2>
             <p>
