--- a/research.html
+++ b/research.html
@@ -136,7 +136,7 @@
 
         <!-- Project 2 -->
         <div class="research-project">
-            <h2>Strategic bidding in dynamic renewable energy auctions</h2>
+            <h2>Strategic bidding in dynamic renewable energy auctions (With Richard Sweeney)</h2>
             <p>
                              Reaching climate goals requires a green energy transition over time, necessitating phased procurement and making dynamics important for the auction design. This paper develops a dynamic auction model where forward-looking firms adjust bids strategically across multiple periods. We derive equilibrium bidding strategies, showing that bid markups depend on cost distribution, market composition, and continuation values. Comparing one-shot and two-period auctions shows a tradeoff: one-shot auctions involve higher bids due to larger auctioned quantities, while dynamic auctions allow firms to bid strategically over time. Our findings highlight how auction design influences procurement efficiency, emphasizing the need to account for bidder expectations to minimize costs and improve outcomes.
 
